res/examples/valid/type_alias_with_existing_const_in_closed_scope.eg
{
    const A = 123;
};

type A = number;