res/examples/invalid/type_alias_when_already_defined_const.eg
const Int = 123;
type Int = number;

// out: TypeError: Int is already defined